# serializer version: 1
# name: test_all_entities[switch.nursery_yoto_bluetooth_pairing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_bluetooth_pairing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bluetooth pairing',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bluetooth pairing',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bluetooth_pairing',
    'unique_id': 'player-test_bluetooth_pairing',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_bluetooth_pairing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nursery Yoto Bluetooth pairing',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_bluetooth_pairing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_day_mode_automatic_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_day_mode_automatic_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Day mode automatic brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Day mode automatic brightness',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_mode_auto_brightness',
    'unique_id': 'player-test_day_mode_auto_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_day_mode_automatic_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nursery Yoto Day mode automatic brightness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_day_mode_automatic_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_maximum_headphone_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_maximum_headphone_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum headphone volume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maximum headphone volume',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'max_headphone_volume',
    'unique_id': 'player-test_max_headphone_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_maximum_headphone_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nursery Yoto Maximum headphone volume',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_maximum_headphone_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_night_mode_automatic_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_night_mode_automatic_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night mode automatic brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night mode automatic brightness',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_mode_auto_brightness',
    'unique_id': 'player-test_night_mode_auto_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_night_mode_automatic_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nursery Yoto Night mode automatic brightness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_night_mode_automatic_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
